Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17531

Crash in RENAME TABLE with FOREIGN KEY and FULLTEXT INDEX

    XMLWordPrintable

Details

    Description

      A bug fix in MySQL 5.6.13 for RENAME TABLE introduced a regression for the following test case:

      CREATE TABLE t1 (a INT PRIMARY KEY) ENGINE=InnoDB;
      CREATE DATABASE best;
      CREATE TABLE t3 (a INT PRIMARY KEY,
      CONSTRAINT t2_ibfk_1 FOREIGN KEY (a) REFERENCES t1(a)) ENGINE=InnoDB;
      CREATE TABLE best.t2 (a INT PRIMARY KEY, b TEXT, FULLTEXT INDEX(b),
      FOREIGN KEY (a) REFERENCES t1(a)) ENGINE=InnoDB;
      --error ER_TABLE_EXISTS_ERROR
      RENAME TABLE best.t2 TO test.t2;
      SHOW CREATE TABLE best.t2;
      DROP TABLE best.t2,t3,t1;
      

      10.0 642394197e397fa73d776ee1fecdbd07f54607ff

      Version: '10.0.37-MariaDB-debug'  socket: '/dev/shm/10.0/mysql-test/var/tmp/mysqld.1.sock'  port: 16000  Source distribution
      2018-10-24 10:57:33 7fe9b3592700  InnoDB: Assertion failure in thread 140641713071872 in file que0que.cc line 1248
      InnoDB: Failing assertion: trx->error_state == DB_SUCCESS
      

      There was a fix for this in MySQL 5.6.42 and 5.7.24 (without a test case).

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.